syntax = "proto3";
package com.bulletinboard;
option java_multiple_files = true;

// Implement ProtoFile Here

message addPostRequest{
	string title = 1;
	string body = 2;
}

message addPostResponse{
	string response = 1;
}

message getPostsRequest {}

message getPostsResponse{
	message Post {
		string title = 1;
		string body = 2;
	}
	repeated Post posts = 1;
}

service BulletinBoard{
	rpc addPost(addPostRequest) returns (addPostResponse);
	rpc getPosts(getPostsRequest) returns (getPostsResponse);
}